Revised page design

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="scrollbar" class="hidden"></div>
     <div id="overview-bg">
         <div id="overview" class="overview-center">
             <h1 id="name">Karan Norastehnia</h1>
