--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             </div>
         </div>
     </div>
+
+    <div class="separator"></div>
+    <div id="footer"></div>
+
     <script src="main.js"></script>
 </body>
 </html>
