Updated background and experience sections

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,11 +13,15 @@
             <h1 id="name">Karan Norastehnia</h1>
             <h2 id="title">Front-End Developer</h2>
             <div class="separator"></div>
-            <a id="scroll-down" href="#info">scroll down</a>
+            <a id="scroll-down" href="#info">
+                <svg width="40" height="40" viewBox="0 0 24 24">
+                    <path d="M 6 10 L 12 16 L 18 10"/>
+                  </svg>
+            </a>
             <div id="contact">
                 <div class="concealer"></div>
                 <a href="https://github.com/Karan-Norastehnia" target="_blank">
-                    <img src="Icons/github-mark-white.png" alt="github" width="24px" height="24px">
+                    <img src="Icons/github-mark.png" alt="github" width="24px" height="24px">
                 </a>
                 <a href="https://www.linkedin.com/in/karan-norastehnia-a8bb09250/" target="_blank">
                     <img src="Icons/LI-In-Bug.png" alt="linkedin" width="24px" height="24px">
@@ -33,6 +38,65 @@
     <div>
         <div class="card">
             <div class="reveal"></div>
+            <div class="card-header">Background</div>
+            <div class="card-content">
+                <p>
+                    I'm a <span>front-end developer</span> with a focus on building 
+                    user interfaces that are captivating and simple to use.
+                </p>
+                <p>
+                    I write code that is <span>clean</span> and <span>maintainable</span>, to help bring 
+                    life to all sorts of designs. On top of that, I'm always looking to learn new 
+                    skills and technologies to keep up with the latest web dev trends.
+                </p>
+            </div>
+        </div>
+        <div class="card">
+            <div class="reveal"></div>
+            <div class="card-header">Experience</div>
+
+            <div>
+                <h2>
+                    Developer ∷ DataAnnotation Tech
+                    <hr class="first">
+                </h2>
+                <br>
+                <div class="date">
+                    FEB 2024 — Present
+                </div>
+                <div class="skills">
+                    <span>JavaScript</span>
+                    <span>TypeScript</span>
+                    <span>React</span>
+                    <span>Next.js</span>
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>Python</span>
+                    <span>Java</span>
+                </div>
+            </div>
+
+            <div class="separator"></div>
+            
+            <div>
+                <h2>
+                    Front-End Developer ∷ Carbon Floor
+                    <hr class="second">
+                </h2>
+                <br>
+                <div class="date">
+                    OCT 2023 — JAN 2024
+                </div>
+                <div class="skills">
+                    <span>JavaScript</span>
+                    <span>HTML</span>
+                    <span>CSS</span>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="reveal"></div>
+            <div class="card-header">Skills</div>
             <div class="card-content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 At necessitatibus nihil a illum explicabo. 
@@ -42,32 +106,7 @@
         </div>
         <div class="card">
             <div class="reveal"></div>
-            <div class="card-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                At necessitatibus nihil a illum explicabo. 
-                Ducimus, magni. Iste doloremque dolor temporibus totam quisquam expedita. 
-                Magnam, eius? Commodi aperiam fuga odit! Rem?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                At necessitatibus nihil a illum explicabo. 
-                Ducimus, magni. Iste doloremque dolor temporibus totam quisquam expedita. 
-                Magnam, eius? Commodi aperiam fuga odit! Rem?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                At necessitatibus nihil a illum explicabo. 
-                Ducimus, magni. Iste doloremque dolor temporibus totam quisquam expedita. 
-                Magnam, eius? Commodi aperiam fuga odit! Rem?
-            </div>
-        </div>
-        <div class="card">
-            <div class="reveal"></div>
-            <div class="card-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                At necessitatibus nihil a illum explicabo. 
-                Ducimus, magni. Iste doloremque dolor temporibus totam quisquam expedita. 
-                Magnam, eius? Commodi aperiam fuga odit! Rem?
-            </div>
-        </div>
-        <div class="card">
-            <div class="reveal"></div>
+            <div class="card-header">Header</div>
             <div class="card-content">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 At necessitatibus nihil a illum explicabo. 
