--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Karan Norastehnia</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="Icons/favicon.ico">
 </head>
 <body>
     <div id="scrollbar" class="hidden"></div>
