Updated skills section

--- a/index.html
+++ b/index.html
@@ -98,11 +98,30 @@
         <div class="card">
             <div class="reveal"></div>
             <div class="card-header">Skills</div>
-            <div class="card-content">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                At necessitatibus nihil a illum explicabo. 
-                Ducimus, magni. Iste doloremque dolor temporibus totam quisquam expedita. 
-                Magnam, eius? Commodi aperiam fuga odit! Rem?
+            <div class="columns">
+                <div>
+                    <h2>Languages<hr class="first"></h2>
+                    <div>JavaScript</div>
+                    <div>TypeScript</div>
+                    <div>HTML</div>
+                    <div>CSS</div>
+                    <div>Java</div>
+                    <div>Python</div>
+                    <div>SQL</div>
+                </div>
+                <div>
+                    <h2>Frameworks<hr class="second"></h2>
+                    <div>Tailwind CSS</div>
+                    <div>React</div>
+                    <div>Next.js</div>
+                    <div>Node.js</div>
+                </div>
+                <div>
+                    <h2>Tools<hr class="third"></h2>
+                    <div>Git</div>
+                    <div>GitHub</div>
+                    <div>Bash</div>
+                </div>
             </div>
         </div>
         <div class="card">
