--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="overview-bg">
-        <div class="overview">
+        <div class="overview hidden">
             <h1 class="name">Karan Norastehnia</h1>
             <h2 class="title">Front-End Developer</h2>
             <a class="scroll-down" href="#info">
@@ -25,7 +25,7 @@
     <div class="main-bg">
         <div class="main-left">
             <div class="overview-left hidden">
-                <h1 class="name">Karan Norastehnia</h1>
+                <h1 class="name">Karan<br>Norastehnia</h1>
                 <h2 class="title">Front-End Developer</h2>
                 
                 <div class="contact">
@@ -61,8 +61,8 @@
 
             <div class="link">
                 <a href="Files/Resume.pdf" target="_blank">
-                    <hr>
                     <div>View Resume</div>
+                    <hr>
                 </a>
             </div>
 
