--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     </div>
 
     <div class="separator"></div>
-    <div id="footer"></div>
+    <!-- <div id="footer"></div> -->
 
     <script src="main.js"></script>
 </body>
