--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                 <div class="card-header">Background</div>
                 <div class="card-content">
                     <p>
-                        I'm a <span>front-end developer</span> with a focus on building 
+                        I'm a <b>front-end developer</b> with a focus on building 
                         user interfaces that are captivating and simple to use.
                     </p>
                     <p>
-                        I write code that is <span>clean</span> and <span>maintainable</span>, to help bring 
+                        I write code that is <b>clean</b> and <b>maintainable</b>, to help bring 
                         life to all sorts of designs. On top of that, I'm always looking to learn new 
                         skills and technologies to keep up with the latest web dev trends.
                     </p>
@@ -136,18 +136,66 @@
                         <div>Git</div>
                         <div>GitHub</div>
                         <div>Bash</div>
+                        <div>Figma</div>
                     </div>
                 </div>
             </div>
 
             <div class="card hidden">
                 <div class="reveal"></div>
-                <div class="card-header">Header</div>
-                <div class="card-content">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    At necessitatibus nihil a illum explicabo. 
-                    Ducimus, magni. Iste doloremque dolor temporibus totam quisquam expedita. 
-                    Magnam, eius? Commodi aperiam fuga odit! Rem?
+                <div class="card-header">Projects</div>
+
+                <div>
+                    <h2>
+                        Future Project
+                        <hr class="first">
+                    </h2>
+                    <br>
+                    <!-- <div class="date">
+                        FEB 2024 — Present
+                    </div> -->
+                    <div class="skills">
+                        <span>TypeScript</span>
+                        <span>Next.js</span>
+                        <span>HTML</span>
+                        <span>CSS</span>
+                    </div>
+                </div>
+
+                <div class="separator"></div>
+
+                <div>
+                    <h2>
+                        Clock App
+                        <hr class="second">
+                    </h2>
+                    <br>
+                    <!-- <div class="date">
+                        FEB 2024 — Present
+                    </div> -->
+                    <div class="skills">
+                        <span>React</span>
+                        <span>Tailwind CSS</span>
+                        <span>Figma</span>
+                    </div>
+                </div>
+
+                <div class="separator"></div>
+                
+                <div>
+                    <h2>
+                        Portfolio Website
+                        <hr class="third">
+                    </h2>
+                    <br>
+                    <!-- <div class="date">
+                        OCT 2023 — JAN 2024
+                    </div> -->
+                    <div class="skills">
+                        <span>JavaScript</span>
+                        <span>HTML</span>
+                        <span>CSS</span>
+                    </div>
                 </div>
             </div>
         </div>
