--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="background"></div>
+
     <div class="overview-bg">
         <div class="overview hidden">
             <h1 class="name">Karan Norastehnia</h1>
@@ -40,12 +41,18 @@
                         <img src="Icons/Mail.png" alt="email" width="24px" height="24px">
                     </a>
                 </div>
+
+                <nav>
+                    <a href="#background">Background</a>
+                    <a href="#experience">Experience</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#projects">Projects</a>
+                </nav>
             </div>
         </div>
 
         <div class="main-right">
-            <div class="card hidden">
-                <div class="reveal"></div>
+            <div class="card hidden" id="background">
                 <div class="card-content">
                     <div class="card-header">Background</div>
                     <p>
@@ -68,8 +75,7 @@
                 </a>
             </div>
 
-            <div class="card hidden">
-                <div class="reveal"></div>
+            <div class="card hidden" id="experience">
                 <div class="card-content">
                     <div class="card-header">Experience</div>
                     <div>
@@ -113,8 +119,7 @@
                 </div>
             </div>
 
-            <div class="card hidden">
-                <div class="reveal"></div>
+            <div class="card hidden" id="skills">
                 <div class="card-content">
                     <div class="card-header">Skills</div>
                     <div class="columns">
@@ -146,8 +151,7 @@
                 </div>
             </div>
 
-            <div class="card hidden">
-                <div class="reveal"></div>
+            <div class="card hidden" id="projects">
                 <div class="card-content">
                     <div class="card-header">Projects</div>
                     <div>
