--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
 </head>
 <body>
     <div class="background"></div>
-
+    
     <div class="overview-bg">
         <div class="overview hidden">
             <h1 class="name">Karan Norastehnia</h1>
             <h2 class="title">Front-End Developer</h2>
-            <a class="scroll-down" href="#info">
+            <!-- <a class="scroll-down" href="#info">
                 <svg width="25" height="25" viewBox="0 0 24 24">
                     <path d="M 6 10 L 12 16 L 18 10"/>
                 </svg>
-            </a>
+            </a> -->
         </div>
+        <nav>
+            <a href="#background">Background</a>
+            <a href="#experience">Experience</a>
+            <a href="#skills">Skills</a>
+            <a href="#projects">Projects</a>
+        </nav>
     </div>
 
-    <div id="info" class="separator"></div>
+    <div class="separator"></div>
 
     <div class="main-bg">
         <div class="main-left">
