Fix resume file path

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
 
             <div class="link">
-                <a href="Files/Resume.pdf" target="_blank">
+                <a href="Resume.pdf" target="_blank">
                     <hr>
                     <div>View Resume</div>
                     <hr>
