Update LinkedIn URL

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         <a href="https://github.com/Karan-Norastehnia" target="_blank">
             <img src="Icons/github.svg" alt="github" width="24px" height="24px">
         </a>
-        <a href="https://www.linkedin.com/in/karan-norastehnia-a8bb09250/" target="_blank">
+        <a href="https://www.linkedin.com/in/knorastehnia/" target="_blank">
             <img src="Icons/linkedin.svg" alt="linkedin" width="24px" height="24px">
         </a>
         <a href="mailto:k.norastehnia@gmail.com" target="_blank">
