--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
     </div>
 
     <div class="contact contact-alt">
-        <a href="https://github.com/Karan-Norastehnia" target="_blank">
+        <a href="https://github.com/knorastehnia" target="_blank">
             <img src="Icons/github.svg" alt="github" width="24px" height="24px">
         </a>
         <a href="https://www.linkedin.com/in/knorastehnia/" target="_blank">
