--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <h2 class="title">Front-End Developer</h2>
                 
                 <div class="contact">
-                    <a href="https://github.com/Karan-Norastehnia" target="_blank">
+                    <a href="https://github.com/knorastehnia/" target="_blank">
                         <img src="Icons/github.svg" alt="github" width="24px" height="24px">
                     </a>
-                    <a href="https://www.linkedin.com/in/karan-norastehnia-a8bb09250/" target="_blank">
+                    <a href="https://www.linkedin.com/in/knorastehnia/" target="_blank">
                         <img src="Icons/linkedin.svg" alt="linkedin" width="24px" height="24px">
                     </a>
                     <a href="mailto:k.norastehnia@gmail.com" target="_blank">
@@ -177,7 +177,7 @@
                         <div class="project-header">
                             <div>
                                 Virtual Whiteboard
-                                <a target="_blank" href="https://github.com/Karan-Norastehnia/Virtual-Whiteboard">
+                                <a target="_blank" href="https://github.com/knorastehnia/Virtual-Whiteboard">
                                     <img width="20px" height="20px" src="./Icons/github.svg" alt="See On GitHub">
                                 </a>
 
@@ -206,7 +206,7 @@
                         <div class="project-header">
                             <div>
                                 Pocket Watch
-                                <a target="_blank" href="https://github.com/Karan-Norastehnia/Pocket-Watch">
+                                <a target="_blank" href="https://github.com/knorastehnia/Pocket-Watch">
                                     <img width="20px" height="20px" src="./Icons/github.svg" alt="See On GitHub">
                                 </a>
 
@@ -237,7 +237,7 @@
                         <div class="project-header">
                             <div>
                                 Portfolio Website
-                                <a target="_blank" href="https://github.com/Karan-Norastehnia/Portfolio-Website">
+                                <a target="_blank" href="https://github.com/knorastehnia/Portfolio-Website">
                                     <img width="20px" height="20px" src="./Icons/github.svg" alt="See On GitHub">
                                 </a>
                             </div>
@@ -261,7 +261,7 @@
     </div>
 
     <div class="contact contact-alt">
-        <a href="https://github.com/knorastehnia" target="_blank">
+        <a href="https://github.com/knorastehnia/" target="_blank">
             <img src="Icons/github.svg" alt="github" width="24px" height="24px">
         </a>
         <a href="https://www.linkedin.com/in/knorastehnia/" target="_blank">
@@ -273,7 +273,6 @@
     </div>
 
     <div class="separator"></div>
-    <!-- <div id="footer"></div> -->
 
     <div id="cursor"></div>
 
