--- a/index.html
+++ b/index.html
@@ -86,12 +86,42 @@
                     <div class="card-header">Experience</div>
                     <div class="section">
                         <h2>
-                            Developer ∷ DataAnnotation Tech
+                            Software Developer ∷ LingoGems
                             <hr>
                         </h2>
                         
                         <div class="date">
-                            FEB 2024 — Present
+                            NOV 2024 — Present
+                        </div>
+
+                        <p>
+                            Migrated cloud infrastructure from DigitalOcean to AWS (EC2, S3), 
+                            improving scalability and performance. Implemented Redis 
+                            caching, optimized PostgreSQL queries, and contributed to front-end 
+                            development to enhance user experience.
+                        </p>
+
+                        <div class="skills">
+                            <span>TypeScript</span>
+                            <span>JavaScript</span>
+                            <span>Next.js</span>
+                            <span>Tailwind CSS</span>
+                            <span>PostgreSQL</span>
+                            <span>AWS</span>
+                            <span>Redis</span>
+                        </div>
+                    </div>
+
+                    <div class="separator"></div>
+
+                    <div class="section">
+                        <h2>
+                            Software Developer ∷ DataAnnotation Tech
+                            <hr>
+                        </h2>
+                        
+                        <div class="date">
+                            FEB 2024 — NOV 2024
                         </div>
 
                         <p>
@@ -149,15 +179,15 @@
                             <div>TypeScript</div>
                             <div>HTML</div>
                             <div>CSS / SCSS</div>
-                            <div>Python</div>
                             <div>SQL</div>
                         </div>
                         <div>
                             <h2>Frameworks<hr class="second"></h2>
-                            <div>Tailwind CSS</div>
-                            <div>React</div>
                             <div>Next.js</div>
+                            <div>React</div>
+                            <div>Tailwind CSS</div>
                             <div>Node.js</div>
+                            <div>Express.js</div>
                         </div>
                         <div>
                             <h2>Tools<hr class="third"></h2>
@@ -165,6 +195,7 @@
                             <div>GitHub</div>
                             <div>Bash</div>
                             <div>Figma</div>
+                            <div>Docker</div>
                         </div>
                     </div>
                 </div>
