--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         <p>
                             Worked with other student developers to build a comprehensive 
                             web app while maintaining regular communication with the client 
-                            to ensure adherance to requirements.
+                            to ensure adherence to requirements.
                         </p>
 
                         <div class="skills">
